Change in project  +add swagger and redoc to project  + add new requirements in requirements.txt Change in blog app  + change ApiViews to Generic ApiView for better performance(PostListView &Post DetailView now inheritance from GenericApiView)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,17 @@
+
+#general
 django >3.2,<3.3
 python-decouple >3.5
 Pillow
 djangorestframework
+
+#third party modules
 markdown
 django-filter
+drf-yasg[validation]
+
+
+#deployment module
+
+
+
