--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,28 @@ services:
   backend:
     build: .
     container_name: backend
-    command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+    command: ["python", "manage.py", "runserver", "0.0.0.0:8005"]
     volumes:
       - .:/app
     ports:
-      - 8000:8000
+      - 8000:8005
     environment:
       - SECRET_KEY=test
       - DEBUG=True
+
+  smtp4dev:
+    image: rnwood/smtp4dev:v3
+    container_name: smtp4dev
+    restart: always
+    ports:
+      - '5000:80'   # Web UI
+      - '25:25'     # SMTP
+      - '143:143'   # IMAP
+    volumes:
+      - smtp4dev-data:/smtp4dev
+    environment:
+      - ServerOptions__Urls=http://*:80
+      - ServerOptions__HostName=smtp4dev
+
+volumes:
+  smtp4dev-data:
