--- a/requirements.txt
+++ b/requirements.txt
@@ -16,5 +16,17 @@ djangorestframework-simplejwt
 
 
 
-
+#email thrid party modules
 django-mail-templated
+
+
+#refactoring and tests
+black
+flake8
+pytest
+pytest-django
+Faker
+
+# background proccess and cache
+celery
+redis
