--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,13 +8,28 @@ on:
 
 jobs:
 
-  build:
-
+  Test:
+    name: Test
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Setup Docker-Compose
-      run: docker-compose up -d
-    - name: Run Tests
-      run: docker exec backend sh -c "pytest ."
+      - uses: actions/checkout@v4
+      - name: Setup Docker-Compose
+        run: docker-compose up -d
+      - name: Run Tests
+        run: docker exec backend sh -c "pytest ."
+
+  Deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Connect & Execute Commands 
+        uses: appleboy/shh-action@master
+        with:
+           username:
+           password:
+           host:
+           port:
+           script: ls
